--- a/src/theme.css
+++ b/src/theme.css
@@ -2,17 +2,17 @@
   --color-theme-light: var(--theme-light, white);
   --color-theme-dark: var(--theme-dark, black);
 
-  --color-theme-50: var(--theme-50);
-  --color-theme-100: var(--theme-100);
-  --color-theme-200: var(--theme-200);
-  --color-theme-300: var(--theme-300);
-  --color-theme-400: var(--theme-400);
-  --color-theme-500: var(--theme-500);
-  --color-theme-600: var(--theme-600);
-  --color-theme-700: var(--theme-700);
-  --color-theme-800: var(--theme-800);
-  --color-theme-900: var(--theme-900);
-  --color-theme-950: var(--theme-950);
+  --color-theme-50: var(--theme-50, var(--color-neutral-50));
+  --color-theme-100: var(--theme-100, var(--color-neutral-100));
+  --color-theme-200: var(--theme-200, var(--color-neutral-200));
+  --color-theme-300: var(--theme-300, var(--color-neutral-300));
+  --color-theme-400: var(--theme-400, var(--color-neutral-400));
+  --color-theme-500: var(--theme-500, var(--color-neutral-500));
+  --color-theme-600: var(--theme-600, var(--color-neutral-600));
+  --color-theme-700: var(--theme-700, var(--color-neutral-700));
+  --color-theme-800: var(--theme-800, var(--color-neutral-800));
+  --color-theme-900: var(--theme-900, var(--color-neutral-900));
+  --color-theme-950: var(--theme-950, var(--color-neutral-950));
 }
 
 @layer utilities {
