--- a/src/theme.css
+++ b/src/theme.css
@@ -1,3 +1,8 @@
+@import "swiper/css";
+@import "swiper/css/autoplay";
+@import "swiper/css/keyboard";
+@import "swiper/css/free-mode";
+
 @custom-variant disabled (&:is([disabled], :disabled));
 
 @custom-variant theme-solid (&:where([data-theme="solid"]));
