--- a/.storybook/preview.css
+++ b/.storybook/preview.css
@@ -1,12 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+
 @import "tailwindcss";
 @import "../src/theme";
 
-@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");
-
-@layer base {
-  body {
-    font-family: "Nunito Sans", sans-serif;
-  }
+body {
+  font-family: "Noto Sans", sans-serif;
+  font-optical-sizing: auto;
 }
 
 @layer utilities {
