--- a/src/theme.css
+++ b/src/theme.css
@@ -11,11 +11,17 @@
 
 @custom-variant stuck (&[data-stuck], &:has([data-forcing-overlay]));
 
-body {
-  @apply **:empty:[is(div,span,p,h1,h2,h3,h4,h5,h6)]:hidden;
+@layer base {
+  body {
+    @apply **:empty:[is(div,span,p,h1,h2,h3,h4,h5,h6)]:hidden;
 
-  &:has([data-overlay]) {
-    @apply overflow-hidden;
+    &:has([data-overlay]) {
+      @apply overflow-hidden;
+    }
+  }
+
+  a {
+    @apply inline-block;
   }
 }
 
