--- a/src/theme.css
+++ b/src/theme.css
@@ -17,7 +17,7 @@
   }
 
   body {
-    @apply **:empty:[is(div,span,p,h1,h2,h3,h4,h5,h6)]:hidden;
+    @apply **:empty:[span,p,h1,h2,h3,h4,h5,h6]:hidden;
 
     &:has([data-overlay]) {
       @apply overflow-hidden;
